# mast-aladin

./: .readthedocs.yaml  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci_workflows.yml  publish.yml
docs/: api.rst  conf.py  index.rst  installation.rst
mast_aladin/: __init__.py  aida.py  app.py  app_sidecar.py  conftest.py  mixins.py
mast_aladin/adapters/: __init__.py  aladin_sync_adapter.py  imviz_sync_adapter.py  sync_manager.py  viewer_sync_adapter.py  viewer_sync_ui.py  viewport_outline.py
mast_aladin/managers/: __init__.py  app_manager.py  mast_manager.py
mast_aladin/overlay/: mast_overlay.py  overlay_manager.py
mast_aladin/table/: mast_table.py  mast_table.vue
mast_aladin/tests/: test_add_asdf.py  test_add_fits.py  test_overlays_dict.py  test_utils.py
mast_aladin/utils/: footprint_generator.py  selectSIAF.py
notebooks/: AIDA_fov_getting_and_setting.ipynb  AIDA_mixin_get_viewport.ipynb  AIDA_mixin_getset_viewport_with_rotation.ipynb  AIDA_mixin_set_viewport.ipynb  Footprint_Generation.ipynb  Intro_To_Mast_Aladin.ipynb  JWST_L2L3_Demo.ipynb  Mast_Manager_Demo.ipynb  Overlay_Management_Demo.ipynb  Overlay_Update_Demo.ipynb  Region_Search_Overview.ipynb  Region_Search_Short_Demo.ipynb  Selection_By_Region_Demo.ipynb  Selection_Demo.ipynb  Selection_Sandbox-ss1.ipynb  Selection_Sandbox.ipynb  add_asdf_demo.ipynb  demo-select-MAST-products.ipynb  demo-select-MAST-roman-products.ipynb  demo-sidecar-launcher.ipynb  gaia_sources.csv  mast_search_helpers.py  roman_obs.csv  view_sync_example.ipynb  viewer-outlines.ipynb
(+4 files in other folders)
